salesforce-main/src/main/default/objects/Object_Stream_Setting__mdt/Object_Stream_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Settings to control SObject Streaming via Outbound events</description>
    <label>Object Stream Setting</label>
    <pluralLabel>Object Stream Settings</pluralLabel>
</CustomObject>