salesforce-main/src/main/default/objects/Object_Stream_Setting__mdt/fields/Emitter__c.field-meta.xml
<CustomField>
    <fullName>Emitter__c</fullName>
    <label>Emitter</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>