salesforce-main/src/main/default/objects/Object_Stream_Setting__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>A comma separated list of fields that trigger the stream event - when any of the fields are changed in this list it will process an outbound stream event.</description>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>