salesforce-main/src/main/default/objects/Object_Stream_Setting__mdt/fields/Operation_Lock__c.field-meta.xml
<CustomField>
    <fullName>Operation_Lock__c</fullName>
    <description>Comma separated list used to lock an event stream to a specific set of operation types, ie AFTER_DELETE</description>
    <label>Operation Lock</label>
    <type>TextArea</type>
</CustomField>