salesforce-main/src/main/default/objects/Object_Stream_Setting__mdt/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <description>A comma separated list of Record types to restrict this event to</description>
    <label>Record Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>