salesforce-main/src/main/default/objects/Object_Stream_Setting__mdt/fields/Serializer__c.field-meta.xml
<CustomField>
    <fullName>Serializer__c</fullName>
    <label>Serializer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>