salesforce-main/src/main/default/objects/Object_Stream_Setting__mdt/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <label>SObject Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>