salesforce-main/src/main/default/objects/Object_Stream_Setting__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sort Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>